# trade-tracker

./: .gitignore  middleware.ts  package-lock.json  package.json
cli/: Cargo.toml  LICENSE
cli/src/: client.rs  config.rs  display.rs  main.rs  models.rs
cli/src/commands/: deposits.rs  login.rs  logout.rs  mod.rs  portfolio.rs  prices.rs  search.rs  settings.rs  transactions.rs
public/: manifest.json
src/actions/: deposits.ts  settings.ts  transactions.ts
src/app/: globals.css  layout.tsx
src/app/(app)/: layout.tsx
src/app/(app)/analysis/: loading.tsx  page.tsx
src/app/(app)/dashboard/: loading.tsx  page.tsx
src/app/(app)/settings/: loading.tsx  page.tsx
src/app/(app)/transactions/: loading.tsx  page.tsx
src/app/(app)/transactions/new/: page.tsx
src/app/cli/login/: page.tsx
src/components/: AssetLogo.tsx  ColorSchemeProvider.tsx  ColorSchemeSettings.tsx  DepositTable.tsx  HistoricalValueChart.tsx  HoldingsTable.tsx  LandingColorSchemeToggle.tsx  LandingDashboard.tsx  LandingPage.tsx  LandingStyleThemeToggle.tsx  LineChart.tsx  Navigation.tsx  PencilText.tsx  PieChart.tsx  PnLChart.tsx  PnLHeatmap.tsx  SettingsPanel.tsx  ShareCard.tsx  ShareDialog.tsx  SketchyDrawingLayer.tsx  StatsCards.tsx  StyleThemeProvider.tsx  StyleThemeToggle.tsx  SymbolAutocomplete.tsx  Toast.tsx  TransactionForm.tsx  TransactionList.tsx  TransactionShareCard.tsx  TransactionShareDialog.tsx
src/components/ui/: button.tsx  card.tsx
src/lib/: cli-auth.ts  i18n.ts  share-image.ts  utils.ts
src/lib/services/: deposit-service.ts  settings-service.ts  transaction-service.ts
(+15 files in other folders)
