[package]
name = "tradetracker"
version = "0.1.0"
edition = "2021"
description = "CLI for TradeTracker - manage your trading portfolio from the terminal"
license = "MIT"
repository = "https://github.com/oliverzhang42/trade-tracker"
keywords = ["trading", "portfolio", "cli", "finance"]
categories = ["command-line-utilities", "finance"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
open = "5"
axum = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.17"
colored = "3"
